Add new acknowledgment field, integration fields
